--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,4 +13,4 @@ jobs:
       - name: Build and Push Boot Image
         run: |
           docker build . -t ghcr.io/defel/github-actions-playground:latest -t ghcr.io/defel/github-actions-playground:1.0.0
-          docker push ghcr.io/defel/github-actions-playground:latest
+          docker push --all-tags ghcr.io/defel/github-actions-playground
