--- a/.github/workflows/envvars.yaml
+++ b/.github/workflows/envvars.yaml
@@ -8,7 +8,7 @@ jobs:
 
     env:
       BUILD_TIME: ${{github.event.repository.updated_at}}
-      BUILD_VERSION: ${{env.GITHUB_SHA}}
+      BUILD_VERSION: $GITHUB_SHA
 
     steps:
       - name: "Build Time"
